7. ListIterator [#350217] упростил код